[gd_scene load_steps=5 format=2]

[ext_resource path="res://resorces/button_off.png" type="Texture" id=1]
[ext_resource path="res://level_parts/button.gd" type="Script" id=2]
[ext_resource path="res://resorces/button_on.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[node name="button" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="button_off" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="button_on" type="Sprite" parent="."]
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_button_body_exited"]
